<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:paddingTop="5dp"
        android:text="@string/sign_up"
        android:textColor="#c3c3c3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#c3c3c3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:paddingTop="5dp"
        android:text="Sign In"
        android:textColor="#c3c3c3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="HardcodedText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/sign_up2"
        android:textAllCaps="false"
        android:textColor="#c3c3c3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6603DAC5"
        android:padding="5dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#c3c3c3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:text="FULL NAME"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText2"
        app:layout_constraintStart_toStartOf="@+id/textInputEditText2"
        tools:ignore="HardcodedText,SmallSp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="229dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:hint="Enter your full name"
        android:minHeight="48dp"
        android:paddingLeft="-1dp"
        android:paddingTop="3dp"
        android:textColorHint="#878282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        android:text="PASSWORD"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
        tools:ignore="HardcodedText,SmallSp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="****************"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="-1dp"
        android:paddingTop="3dp"
        android:textColorHint="#878282"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:text="PHONE-NUMBER"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        tools:ignore="HardcodedText,SmallSp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:ems="10"
        android:hint="Your phone contact"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="-1dp"
        android:textColorHint="#878282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="13dp"
        android:orientation="vertical"
        android:text="EMAIL"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,SmallSp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="Your email goes here"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="-1dp"
        android:textColorHint="#878282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="116dp"
        android:layout_height="61dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="99dp"
        android:backgroundTint="#6616F8E2"
        android:orientation="vertical"
        android:padding="10dp"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="#c3c3c3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>